css/style.css
/*bersihkan halaman dari gaya bawaan browser*/
/*=====CSS RESET=====*/
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}
/*deklarasi variabel global*/
/*=====ROOT=====*/
:root {
    --primary-color: #050301;
    --text-color: #333;
    --background-color: #f9f9f9;
}
/*menerapkan gaya ke seluruh elemen atau bagian situs web secara bersamaan*/
/*=====GLOBAL=====*/
body {
    font-family: Arial, Helvetica, sans-serif;
    color: var(--text-color);
    background-color: var(--background-color);
    line-height: 1.6;
}

main {
    padding: 1.5rem;
}

.center-text {
    width: 50%;
    margin-left: auto;
    margin-right: auto;
    text-align: center;
}

.left-text {
    width: 50%;
    margin-left: 10px;
    margin-right: 10px;
    text-align: left;
    margin-bottom: 1.5rem;
}

.left-text-bottom {
    width: 50%;
    margin-left: 10px;
    margin-right: 10px;
    text-align: left;
    margin-top: 1.5rem;
}

.right-text {
    display: flex;
    justify-content: right;
    align-items: right;
    text-align: right;
    height: inherit;
}

.logo {
    float: right;
    margin-left: 15px;
    margin-right: 10px;
    width: 20%;
}

